@@ -6,7 +6,7 @@
 
    The GnuCOBOL runtime library is free software: you can redistribute it
    and/or modify it under the terms of the GNU Lesser General Public License
-   as published by the Freecob_freetware Foundation, either version 3 of the
+   as published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.
 
    GnuCOBOL is distributed in the hope that it will be useful,
