@@ -2906,12 +2906,16 @@ AT_DATA([prog.cob], [
        PROGRAM-ID.     prog.
        OPTIONS.
            ENTRY-CONVENTION COBOL.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       SPECIAL-NAMES.
+           CALL-CONVENTION 0 IS EXTERN.
 
        PROCEDURE       DIVISION EXTERN.
            CONTINUE
            .
 ])
 AT_CHECK([$COMPILE_ONLY prog.cob], [0], [],
-[prog.cob: 7: warning: overriding convention specified in ENTRY-CONVENTION
+[prog.cob: 11: warning: overriding convention specified in ENTRY-CONVENTION
 ])
 AT_CLEANUP
